--- a/tyc.html
+++ b/tyc.html
@@ -8,7 +8,7 @@
 <body>
 <p>
 
-  Al ingresar tus datos y darle click a Regalar daticos, aceptas que Duplat, y terceros autorizados por &eacutel, puedan enviarte actualizaciones, informaci&oacuten y/o noticias del artista a la direcci&oacuten de correo y/o n&uacutemero celular suministrados.
+  Al ingresar tus datos y darle click a Adquirir Sorpresa, aceptas que Duplat, y terceros autorizados por &eacutel, puedan enviarte actualizaciones, informaci&oacuten y/o noticias del artista a la direcci&oacuten de correo y/o n&uacutemero celular suministrados.
 
 </p>
 
