--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
         <input id="cel" type="text" name="first_name" placeholder="420 420 6969" required>
         <input id="mail" type="text" name="last_name" placeholder="duplatenjoyer@gmail.com" required>
-        <input id="clickMe" type="button" value="Adquirir sorpresa" onclick="rickRoll();" />
+        <button id="clickMe" type="submit" onclick="rickRoll()">Adquirir Sorpresa</button>
         <label><input type="checkbox" id="cbox1" value="first_checkbox" required> Acepto <a href="tyc.html">t&eacuterminos y condiciones</a></label><br>
 </form>
 <a href="https://www.animatedimages.org/cat-3d-smileys-and-smilies-2113.htm"><img src="https://www.animatedimages.org/data/media/2113/animated-3d-smiley-image-0035.gif" border="0" alt="animated-3d-smiley-image-0035" /></a>
